# IADS-Agentic-SQL-Agent

./: .dockerignore  .editorconfig  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_READY.md  Dockerfile  Dockerfile.prod  IADS_Team4_DataSpeak.pptx  LICENSE  Makefile  README.md  SECURITY.md  SETUP_COMPLETE.md  deploy.bat  deploy.sh  docker-compose.prod.yml  docker-compose.yml  monitoring_dashboard.py  preflight_check.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_connection.py
.github/: PULL_REQUEST_TEMPLATE.md
app/: __init__.py  main.py  monitoring.py  pipeline.py  production_pipeline.py
data/: placeholder_docs.json
db/: README.md  glossary.yaml  schema_descriptions.yaml
deploy/: README.md
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  EVALUATION.md  OCI_DEPLOYMENT.md  OWNERSHIP.md  PERFORMANCE.md  PROJECT_REVIEW.md  PROMPT_CUSTOMIZATION.md  RELATED_WORK.md  REQUEST_LIFECYCLE.md  SETUP_GUIDE.md  STRUCTURE.md
evaluation/: benchmark.py  local_db.py  metrics.py
examples/: README.md  _path.py  benchmark_example.py  chart_example.py  glossary_example.py  pii_example.py  summariser_example.py
frontend/: _synctest.py  chart_templates.py  dash_intel.py  dashboard_intel.py  intel_ui.py  result_ops.py  result_transforms.py  streamlit_app.py
notebooks/: 01_explore_dataset.ipynb  03_prompt_iteration.ipynb
observability/: README.md
pitch/: IADS_Team4_DataSpeak_PitchPackage.docx  IADS_Team4_DataSpeak_v2.pptx  IADS_Team4_DataSpeak_v3.pptx
prompts/: critic.md  (+5 more)
(+119 files in other folders)
