[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-agent"
version = "0.1.0"
description = "Multi-stage agentic text-to-SQL system on Oracle Cloud Infrastructure"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Team 4 — IADS Hackathon 2026" }]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "oci>=2.120",
    "oracledb>=2.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "streamlit>=1.32",
    "httpx>=0.27",
    "langchain-core>=0.3",
    "numpy>=1.26",
    "structlog>=24.1",
    "sqlglot>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
